--- a/_sass/components/_intro-image.scss
+++ b/_sass/components/_intro-image.scss
@@ -1,10 +1,12 @@
 .intro-image {
   width: 100%;
-  height: auto;
+  height: 175%;
   margin-top: -40px;
 }
 .intro-image-absolute {
   max-width: none;
+    width: 100%;
+  height: 175%;
 
   padding: 0;
   margin-bottom: 30px;
