--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -117,7 +117,7 @@ body {
   }
 }
 
-/* Stuff I added */
+/* Stuff I added Adding comment to force rebuild hopefully*/
 
 .comic  {
   max-width: 100%;
