css abd other formatting changes

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -123,4 +123,9 @@ body {
   max-width: 100%;
 }
 
-
+.archive {
+  margin-bottom: -20px;
+  margin-top: -82px;
+  text-align: center;
+  font-size: 35px;
+}
