--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -129,3 +129,9 @@ body {
   text-align: center;
   font-size: 35px;
 }
+.service-title {
+  margin-bottom: -20px;
+  margin-top: -82px;
+  text-align: center;
+  font-size: 35px;
+}
